crates/icydb-core/tests/ui/db/persisted_by_kind_payload_requires_codec.stderr
error[E0277]: the trait bound `CloneDebugOnly: PersistedByKindCodec` is not satisfied
  --> tests/ui/db/persisted_by_kind_payload_requires_codec.rs:19:51
   |
19 |     let _ = encode_persisted_slot_payload_by_kind(&value, FieldKind::Text { max_len: None }, "broken");
   |             ------------------------------------- ^^^^^^ unsatisfied trait bound
   |             |
   |             required by a bound introduced by this call
   |
help: the trait `PersistedByKindCodec` is not implemented for `CloneDebugOnly`
  --> tests/ui/db/persisted_by_kind_payload_requires_codec.rs:9:1
   |
 9 | struct CloneDebugOnly;
   | ^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `PersistedByKindCodec`:
             BTreeMap<K, V>
             BTreeSet<T>
             Box<T>
             Nat
             Nat128
             Option<T>
             Vec<T>
             bool
           and $N others
note: required by a bound in `icydb_core::db::encode_persisted_slot_payload_by_kind`
  --> src/db/data/persisted_row/codec.rs
   |
   | pub fn encode_persisted_slot_payload_by_kind<T>(
   |        ------------------------------------- required by a bound in this function
...
   |     T: PersistedByKindCodec,
   |        ^^^^^^^^^^^^^^^^^^^^ required by this bound in `encode_persisted_slot_payload_by_kind`
